--- a/roles/services/templates/image/Makefile
+++ b/roles/services/templates/image/Makefile
@@ -1,8 +1,3 @@
-{%- if docker_registry_url is defined -%}
-  {%- set registry_url = docker_registry_url + '/' -%}
-{%- else -%}
-  {%- set registry_url = '' -%}
-{%- endif -%}
 .DEFAULT_GOAL := build
 
 TAG ?= latest
@@ -18,7 +13,7 @@ NAME ?= $(PROJECT)-{{ service_name }}
 build:
 	docker build . --tag $(REGISTRY)$(NAME):$(TAG)
 
-push:
+push: build
 	@[ "$(REGISTRY)" ] \
 		&& docker push $(REGISTRY)$(NAME):$(TAG) \
 		|| ( echo "registry for "$(NAME)" is not set"; exit 0 )
